test/expected/declare_lv.out
declare x as long void
        ^
9: error: "long void" is illegal for built-in type
